# toml-config-manager

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: toml_config_manager.py
config/local/: .secrets.toml.example  config.toml  docker-compose.yaml
examples/: Dockerfile  read_config.py
tests/unit/config/: test_toml_config_manager.py
